src-tauri/abilities-runtime/tests/trybuild/boundary/app_boundary_modules_unavailable.rs
use abilities_runtime::{db, db_service, queries, state};

fn main() {
    let _ = (db, db_service, queries, state);
}
